[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "veepeenet"
version = "2.1.0"
description = "VeePeeNET. Deploy personal anti-censorships services"
requires-python = ">=3.12"

dependencies = [
    "pydantic~=2.12",
    "typer~=0.21",
    "requests~=2.32"
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-mock~=3.15",
    "build~=1.4",
    "pylint~=4.0",
    "ansible-lint~=26.1"
]

[project.scripts]
xrayctl = "app.main:typer_app"
xray-migrate-1-to-2 = "app.migration_1_2:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
app = ["resources/**"]
