[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "veepeenet"
version = "2.4.1"
description = "VeePeeNET. Deploy personal anti-censorships services"
requires-python = ">=3.12"

dependencies = [
    "pydantic==2.12.5",
    "typer==0.24.1",
    "requests==2.33.1",
    "xxhash==3.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "build==1.4.2",
    "pylint==4.0.5",
    "ansible-lint==26.4.0"
]

[project.scripts]
xrayctl = "app.main:typer_app"
xray-migrate-1-to-2 = "app.migration_1_2:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
app = ["resources/**"]
